fix: Uninstall pytest in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
   - "3.6"
 install:
   - pip install python-coveralls nosexcover
+  - pip uninstall -y pytest
   - pip install -r requirements_tests.txt
 script:
   - python -m nose --with-doctest --with-xcoverage --cover-package=help
